Update and rename football.html to Football.html

--- a/Football.html
+++ b/Football.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="app.css" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css?family=Lemon" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet">
         <title>About Kevin</title>
         <meta charset="utf-8">
