--- a/ATM.html
+++ b/ATM.html
@@ -19,7 +19,7 @@
         </ul>
     </header>
         <article>
-        <h2>BYE</h2>
+        <h2>About ATM</h2>
         <p></p>
         </article>
         <article>
