--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li class="skills">Typing</li>
         <li class="skills">Coding</li>
         </ul>
-        <p><img class="Skill" src="images/mySkillsPic.jpg"></p>
+        <p><img class="Skill" src="images/mySkillsPic.jpg" alt="Picture of a magizine I made in Indesign" width="250px" ></p>
         </article>
         <article>
             <h2>My Hobbies and Interests</h2>
