--- a/ATM.html
+++ b/ATM.html
@@ -20,7 +20,7 @@
     </header>
         <article>
         <h2>About ATM</h2>
-        <p></p>
+        <p>In 6th grade we learned Typing, Microsoft Word, Microsoft PowerPoint, Microsoft Excel. In 7th grade we also learned Photoshop, Illustrator, Indesign, Sketchup, Coding, and Typing. 8th Grade we are learning about Coding, How to make a website, Css, html and Typing.</p>
         </article>
         <article>
         <h2></h2>
