--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <li class="skills">Photoshop</li>
         <li class="skills">Typing</li>
         <li class="skills">Coding</li>
+        <li class="skills">Football</li>
+        <li class="skills">Math</li>
+        <li class="skills">Video Games</li>
         </ul>
         <p><img class="Skill" src="images/mySkills.jpg" alt="Picture of a magazine I made in Indesign" width="250px" ></p>
         </article>
