--- a/myFuture.html
+++ b/myFuture.html
@@ -19,8 +19,8 @@
         </ul>
     </header>
         <article>
-        <h2>HI</h2>
-        <p></p>
+        <h2>High School</h2>
+        <p>The two major high schools I really want to go to is Lakewood or Poly. I want to go to either one of these schools because of there computer classes.</p>
         </article>
         <article>
         <h2></h2>
