--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li class="skills">Math</li>
         <li class="skills">Video Games</li>
         </ul>
-        <p><img class="Skill" src="images/mySkills.jpg" alt="Picture of a magazine I made in Indesign" width="250px" ></p>
+        <p><img class="Skill" src="images/mySkillsPic.jpg" alt="Picture of a magazine I made in Indesign" width="250px" ></p>
         </article>
         <article>
             <h2>My Hobbies and Interests</h2>
