--- a/myFuture.html
+++ b/myFuture.html
@@ -20,7 +20,7 @@
     </header>
         <article>
         <h2>High School</h2>
-        <p>The two major high schools I really want to go to is Lakewood or Poly. I want to go to either one of these schools because of there computer classes.</p>
+        <p>The two major high schools I really want to go to is Lakewood or Poly. I want to go to either one of these schools because of there computer programs.</p>
         </article>
         <article>
         <h2></h2>
